--- a/LISignIn/Base.lproj/Main.storyboard
+++ b/LISignIn/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LISignIn" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,107 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s17-l9-UMg">
+                                <rect key="frame" x="214" y="119" width="173" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="173" id="PqQ-fl-xKg"/>
+                                </constraints>
+                                <state key="normal" title="LinkedIn Sign in"/>
+                                <connections>
+                                    <segue destination="6EM-bc-4M9" kind="presentation" identifier="idSegueShowWebVC" id="nvO-wM-zsk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zby-jN-dmX">
+                                <rect key="frame" x="214" y="157" width="173" height="30"/>
+                                <state key="normal" title="Get my profile URL"/>
+                                <connections>
+                                    <action selector="getProfileInfo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="t0w-DQ-pic"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Ien-KO-fbM">
+                                <rect key="frame" x="20" y="210" width="560" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="b0U-Zp-I54"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.99607843139999996" green="0.38823529410000002" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="openProfileInSafari:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dvB-Gh-hZk"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="s17-l9-UMg" firstAttribute="leading" secondItem="zby-jN-dmX" secondAttribute="leading" id="H9p-kf-LDi"/>
+                            <constraint firstItem="Ien-KO-fbM" firstAttribute="top" secondItem="zby-jN-dmX" secondAttribute="bottom" constant="23" id="PxM-VE-bcY"/>
+                            <constraint firstItem="zby-jN-dmX" firstAttribute="trailing" secondItem="s17-l9-UMg" secondAttribute="trailing" id="UnP-Is-8F8"/>
+                            <constraint firstItem="s17-l9-UMg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="99" id="WWa-7V-DO5"/>
+                            <constraint firstItem="zby-jN-dmX" firstAttribute="top" secondItem="s17-l9-UMg" secondAttribute="bottom" constant="8" symbolic="YES" id="Ym4-d8-HJq"/>
+                            <constraint firstItem="Ien-KO-fbM" firstAttribute="centerX" secondItem="zby-jN-dmX" secondAttribute="centerX" id="cQ9-0y-V0R"/>
+                            <constraint firstItem="Ien-KO-fbM" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="jQs-N5-Qo8"/>
+                            <constraint firstItem="Ien-KO-fbM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="vwa-LN-M9O"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="btnGetProfileInfo" destination="zby-jN-dmX" id="w1P-sq-fGg"/>
+                        <outlet property="btnOpenProfile" destination="Ien-KO-fbM" id="ag7-F0-LuV"/>
+                        <outlet property="btnSignIn" destination="s17-l9-UMg" id="B5w-Br-Ebw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="2QP-NQ-j8e">
+            <objects>
+                <viewController id="6EM-bc-4M9" customClass="WebViewController" customModule="LISignIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uHG-sW-gZh"/>
+                        <viewControllerLayoutGuide type="bottom" id="aik-nD-Skb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OLd-sh-E2z">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ahN-nP-obK">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="WJ6-jX-o2q"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="stop" id="N7Y-0T-Td2">
+                                        <connections>
+                                            <action selector="dismiss:" destination="6EM-bc-4M9" id="Yz7-xV-ZcP"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MJJ-fL-VBI">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aik-nD-Skb" firstAttribute="top" secondItem="MJJ-fL-VBI" secondAttribute="bottom" id="4fn-pk-1Hi"/>
+                            <constraint firstItem="ahN-nP-obK" firstAttribute="top" secondItem="uHG-sW-gZh" secondAttribute="bottom" id="7Nf-33-B9m"/>
+                            <constraint firstItem="MJJ-fL-VBI" firstAttribute="leading" secondItem="OLd-sh-E2z" secondAttribute="leadingMargin" constant="-20" id="7dK-H9-8zU"/>
+                            <constraint firstItem="ahN-nP-obK" firstAttribute="leading" secondItem="OLd-sh-E2z" secondAttribute="leadingMargin" constant="-20" id="GvD-vH-Z0l"/>
+                            <constraint firstItem="MJJ-fL-VBI" firstAttribute="top" secondItem="ahN-nP-obK" secondAttribute="bottom" id="JjM-tu-fsN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MJJ-fL-VBI" secondAttribute="trailing" constant="-20" id="rot-tJ-azg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ahN-nP-obK" secondAttribute="trailing" constant="-20" id="sKh-oF-LiV"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="MJJ-fL-VBI" id="GYo-6e-AUT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qzV-X0-7Yb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="945" y="438"/>
         </scene>
     </scenes>
 </document>
