--- a/LISignIn/Base.lproj/Main.storyboard
+++ b/LISignIn/Base.lproj/Main.storyboard
@@ -1,9 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,11 +18,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s17-l9-UMg">
-                                <rect key="frame" x="214" y="119" width="173" height="30"/>
+                                <rect key="frame" x="101" y="119" width="173" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="173" id="PqQ-fl-xKg"/>
                                 </constraints>
@@ -29,27 +32,27 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zby-jN-dmX">
-                                <rect key="frame" x="214" y="157" width="173" height="30"/>
+                                <rect key="frame" x="101" y="157" width="173" height="30"/>
                                 <state key="normal" title="Get my profile URL"/>
                                 <connections>
-                                    <action selector="getProfileInfo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="t0w-DQ-pic"/>
+                                    <action selector="getProfileInfoWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kMC-Ve-Bfj"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Ien-KO-fbM">
-                                <rect key="frame" x="20" y="210" width="560" height="40"/>
+                                <rect key="frame" x="16" y="210" width="343" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="b0U-Zp-I54"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Button">
-                                    <color key="titleColor" red="0.99607843139999996" green="0.38823529410000002" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.99607843139999996" green="0.38823529410000002" blue="0.094117647060000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="openProfileInSafari:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dvB-Gh-hZk"/>
+                                    <action selector="openProfileInSafariWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DrD-Mc-0rJ"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="s17-l9-UMg" firstAttribute="leading" secondItem="zby-jN-dmX" secondAttribute="leading" id="H9p-kf-LDi"/>
                             <constraint firstItem="Ien-KO-fbM" firstAttribute="top" secondItem="zby-jN-dmX" secondAttribute="bottom" constant="23" id="PxM-VE-bcY"/>
@@ -79,28 +82,28 @@
                         <viewControllerLayoutGuide type="bottom" id="aik-nD-Skb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="OLd-sh-E2z">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ahN-nP-obK">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <rect key="frame" x="-4" y="20" width="383" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="WJ6-jX-o2q"/>
                                 </constraints>
                                 <items>
                                     <barButtonItem systemItem="stop" id="N7Y-0T-Td2">
                                         <connections>
-                                            <action selector="dismiss:" destination="6EM-bc-4M9" id="Yz7-xV-ZcP"/>
+                                            <action selector="dismissWithSender:" destination="6EM-bc-4M9" id="lZ4-Sn-ei8"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
                             </toolbar>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MJJ-fL-VBI">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                                <rect key="frame" x="-4" y="64" width="383" height="603"/>
+                                <color key="backgroundColor" red="0.28958413004875183" green="0.31462949514389038" blue="0.32950475811958313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="aik-nD-Skb" firstAttribute="top" secondItem="MJJ-fL-VBI" secondAttribute="bottom" id="4fn-pk-1Hi"/>
                             <constraint firstItem="ahN-nP-obK" firstAttribute="top" secondItem="uHG-sW-gZh" secondAttribute="bottom" id="7Nf-33-B9m"/>
@@ -117,7 +120,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qzV-X0-7Yb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="945" y="438"/>
+            <point key="canvasLocation" x="953" y="30"/>
         </scene>
     </scenes>
 </document>
